# * Package for initial upload to Google Code
# * Fix remote Webgistix test
# * Add support for Fulfillment by Amazon Basic Fulfillment